--- a/chat-ui/src/styles/chat.css
+++ b/chat-ui/src/styles/chat.css
@@ -1,12 +1,157 @@
 .ChatContainer {
     max-height: 700px;
-    max-width: 500px;
-    min-height: 700px;
+    max-width: 400px;
+    min-height: 400px;
     background-color: #e6eaea;
-    padding: 10px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     height: 100vh;
+    border-radius: 10px;
+}
+
+.SidePanel {
+    float: left;
+    max-width: 200px;
+    width: 20%;
+    height: 100%;
+    background: #2c3e50;
+    color: #f5f5f5;
+    overflow: scroll;
+    overflow-y: hidden;
+    position: relative;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.Profile {
+    width: 80%;
+    margin: 5px auto 0px;
+}
+
+.ProfileWrap {
+    line-height: initial;
+    margin-left: 1px;
+    margin-right: 4px;
+}
+
+.ProfileImage {
+    width: 80%;
+    border-radius: 7px;
+}
+
+.Wrap {
+    margin-left: 1px;
+    margin-right: 2px;
+}
+
+.ChatListContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.ChatListContainer:first-child {
+    margin-top: 33px;
+}
+
+.ChatHeader {
+    background: #f5f5f5;
+    height: 7%;
+    width: 100%;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+    border-top-right-radius: 10px;
+}
+
+.Title {
+    color: #61dafb;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.MessageImg {
+    float: right;
+    margin: 0 0 0 0;
+}
+
+.Sent {
+    background: #f1c40f;
+    color: #f5f5f5;
+    float: right;
+    margin: 0 4px 0 1px;
+}
+
+.Reply {
+    background: #435f7a;
+    color: #f5f5f5;
+    float: left;
+    margin: 0 0 0 0;
+}
+
+.MessagesContainer {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    list-style-type: none;
+    flex-direction: column;
+    min-height: calc(100% - 115px);
+    max-height: calc(100% - 115px);
+    overflow-y: scroll;
+    overflow-x: hidden;
+    margin: 0 0 0 0;
+}
+
+.Messages {
+    width: 100%;
+    height: 100%;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+}
+
+.Messages:first-child{
+    margin-top: 10px;
+}
+
+.Messages:last-child{
+    margin-bottom: 5px;
+}
+
+.Messages > div > li:last-child {
+    margin-bottom: 1px;
+}
+
+.Message {
+    display: inline-block;
+    padding: 10px 15px;
+    border-radius: 20px;
+    max-width: 205px;
+    line-height: 130%;
+    font-size: 16px;
+    margin-top: 2px;
+}
+
+.SenderImage {
+    width: 10%;
+    border-radius: 10px;
+    margin: 3px 5px 2px 2px;
+}
+
+.ActiveChatUser {
+    align-self: center;
+}
+
+.MessageInputContainer {
+    margin-top: auto;
+    margin-bottom: 0;
+    width: 100%;
+}
+
+.UnSidePanel {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
